docs/0.19/_sources/api/gammapy.irf.EffectiveAreaTable2D.rst.txt
EffectiveAreaTable2D
====================

.. currentmodule:: gammapy.irf

.. autoclass:: EffectiveAreaTable2D
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~EffectiveAreaTable2D.axes
      ~EffectiveAreaTable2D.data
      ~EffectiveAreaTable2D.default_interp_kwargs
      ~EffectiveAreaTable2D.is_offset_dependent
      ~EffectiveAreaTable2D.is_pointlike
      ~EffectiveAreaTable2D.quantity
      ~EffectiveAreaTable2D.required_axes
      ~EffectiveAreaTable2D.tag
      ~EffectiveAreaTable2D.unit

   .. rubric:: Methods Summary

   .. autosummary::

      ~EffectiveAreaTable2D.cumsum
      ~EffectiveAreaTable2D.evaluate
      ~EffectiveAreaTable2D.from_hdulist
      ~EffectiveAreaTable2D.from_parametrization
      ~EffectiveAreaTable2D.from_table
      ~EffectiveAreaTable2D.integral
      ~EffectiveAreaTable2D.integrate_log_log
      ~EffectiveAreaTable2D.interp_missing_data
      ~EffectiveAreaTable2D.normalize
      ~EffectiveAreaTable2D.pad
      ~EffectiveAreaTable2D.peek
      ~EffectiveAreaTable2D.plot
      ~EffectiveAreaTable2D.plot_energy_dependence
      ~EffectiveAreaTable2D.plot_offset_dependence
      ~EffectiveAreaTable2D.read
      ~EffectiveAreaTable2D.to_hdulist
      ~EffectiveAreaTable2D.to_table
      ~EffectiveAreaTable2D.to_table_hdu
      ~EffectiveAreaTable2D.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: axes
   .. autoattribute:: data
   .. autoattribute:: default_interp_kwargs
   .. autoattribute:: is_offset_dependent
   .. autoattribute:: is_pointlike
   .. autoattribute:: quantity
   .. autoattribute:: required_axes
   .. autoattribute:: tag
   .. autoattribute:: unit

   .. rubric:: Methods Documentation

   .. automethod:: cumsum
   .. automethod:: evaluate
   .. automethod:: from_hdulist
   .. automethod:: from_parametrization
   .. automethod:: from_table
   .. automethod:: integral
   .. automethod:: integrate_log_log
   .. automethod:: interp_missing_data
   .. automethod:: normalize
   .. automethod:: pad
   .. automethod:: peek
   .. automethod:: plot
   .. automethod:: plot_energy_dependence
   .. automethod:: plot_offset_dependence
   .. automethod:: read
   .. automethod:: to_hdulist
   .. automethod:: to_table
   .. automethod:: to_table_hdu
   .. automethod:: write
